refactor: update Response